finding poka as declaration